--- a/src/index.css
+++ b/src/index.css
@@ -165,3 +165,13 @@ a {
 .animation-delay-4000 {
   animation-delay: 4s;
 }
+
+/* Hide scrollbar for horizontal scroll */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
