--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   min-height: 100vh;
+  transition: opacity 0.2s ease-in-out;
 }
 
 h1,
